--- a/mediatheque/src/main/webapp/relatorio.xhtml
+++ b/mediatheque/src/main/webapp/relatorio.xhtml
@@ -5,9 +5,19 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-
 	<ui:define name="conteudo">
 
+		<div class="row">
+
+			<div class="col-md-5">
+				<h:form class="form-inline">
+					<p:button class="btn amber btn-amber form-control ui-state-hover"
+						value="Baixar relatório" ajax="false">
+					</p:button>
+				</h:form>
+			</div>
+
+		</div>
 
 	</ui:define>
 
