Atualização bootstrap e correção da página responsiva

--- a/mediatheque/src/main/webapp/login.xhtml
+++ b/mediatheque/src/main/webapp/login.xhtml
@@ -10,8 +10,35 @@
 		<div class="row">
 		
 		<div class="col-md-5">
+				<form class="center-on-small-only">
+					<p class="h5 text-center mb-4">Já tem cadastro? Faça seu login.</p>
+
+					<div class="md-form">
+						<i class="fa fa-envelope prefix grey-text"></i>
+						<p:inputText id="defaultForm-email" class="form-control" />
+						<label for="defaultForm-email">Email</label>
+					</div>
+
+					<div class="md-form">
+						<i class="fa fa-lock prefix grey-text"></i>
+						<p:password type="password" id="defaultForm-pass"
+							class="form-control" />
+						<label for="defaultForm-pass">Senha</label>
+					</div>
+
+					<div class="text-center">
+						<button class="btn  amber">Login</button>
+					</div>
+				</form>
+			</div>	
+			
+			<div class="col-md-2">
+				<p:spacer height="75"/>
+			</div>
+			
+			<div class="col-md-5">
 				<form>
-					<p class="h5 text-center mb-4">Faça seu cadastro</p>
+					<p class="h5 text-center mb-4">Crie aqui seu cadastro</p>
 
 					<div class="md-form">
 						<i class="fa fa-user prefix grey-text"></i>
@@ -35,31 +62,8 @@
 					</div>
 				</form>
 			</div>
+
 			
-			<div class="col-md-2"/>
-
-			<div class="col-md-5">
-				<form class="center-on-small-only">
-					<p class="h5 text-center mb-4">Já tem cadastro? Faça seu login.</p>
-
-					<div class="md-form">
-						<i class="fa fa-envelope prefix grey-text"></i>
-						<p:inputText id="defaultForm-email" class="form-control" />
-						<label for="defaultForm-email">Email</label>
-					</div>
-
-					<div class="md-form">
-						<i class="fa fa-lock prefix grey-text"></i>
-						<p:password type="password" id="defaultForm-pass"
-							class="form-control" />
-						<label for="defaultForm-pass">Senha</label>
-					</div>
-
-					<div class="text-center">
-						<button class="btn  amber">Login</button>
-					</div>
-				</form>
-			</div>
 
 		</div>
 
