--- a/mediatheque/src/main/webapp/template.xhtml
+++ b/mediatheque/src/main/webapp/template.xhtml
@@ -3,6 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:b="http://bootsfaces.net/ui"
 	xmlns:p="http://primefaces.org/ui" lang="pt-BR">
 
 <h:head>
