Upload de imagem e criação do cadastro de nova mídia

--- a/mediatheque/src/main/webapp/cadastro.xhtml
+++ b/mediatheque/src/main/webapp/cadastro.xhtml
@@ -18,7 +18,7 @@
 						<div class="g-signin2" data-onsuccess="onSignIn"></div>
 					</div>
 				
-					<p class="h5 text-center mb-4 mt-5">Crie sua conta com seu email</p>
+					<p class="h5 text-center mb-4 mt-5">Ou crie sua conta com seu email</p>
 
 					<div class="form-label-group mb-4">					
 						<label for="nomeCadastro">Nome</label>
