--- a/mediatheque/src/main/webapp/login.xhtml
+++ b/mediatheque/src/main/webapp/login.xhtml
@@ -17,7 +17,7 @@
 						<div class="g-signin2" data-onsuccess="onSignIn"></div>
 					</div>
 				
-					<p class="h5 text-center mt-5 mb-4">Faça o login com sua conta</p>
+					<p class="h5 text-center mt-5 mb-4">Ou faça o login com sua conta</p>
 
 					<div class="form-label-group mb-4">
 						<label for="emailLogin">Email</label>
